toList replaced by collect